Fixed some mistakes in data and created new methods to filter data

--- a/GAP.TechTest/HighSchoolAPI/appsettings.json
+++ b/GAP.TechTest/HighSchoolAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AppDatabaseConnection": "Data Source=HighSchool.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
